--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -1,10 +1,10 @@
 \doxysection{Class Hierarchy}
 This inheritance list is sorted roughly, but not completely, alphabetically\+:\begin{DoxyCompactList}
 \item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_array_list}}{}
-\item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} int \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_array_list}}{}
-\item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} std\+::string \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_array_list}}{}
 \item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}\+::Array\+List\+Iterator}{\pageref{classssuds_1_1_array_list_1_1_array_list_iterator}}{}
 \item \contentsline{section}{example\+::Bullet}{\pageref{classexample_1_1_bullet}}{}
+\item \contentsline{section}{ssuds\+::Linked\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_linked_list}}{}
+\item \contentsline{section}{ssuds\+::Linked\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}\+::Linked\+List\+Iterator}{\pageref{classssuds_1_1_linked_list_1_1_linked_list_iterator}}{}
 \item \contentsline{section}{example\+::Person}{\pageref{classexample_1_1_person}}{}
 \item \contentsline{section}{example\+::Person\+Database}{\pageref{classexample_1_1_person_database}}{}
 \item testing\+::Test\begin{DoxyCompactList}
