--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -3,10 +3,16 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_array_list}}{}
 \item \contentsline{section}{ssuds\+::Array\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}\+::Array\+List\+Iterator}{\pageref{classssuds_1_1_array_list_1_1_array_list_iterator}}{}
 \item \contentsline{section}{example\+::Bullet}{\pageref{classexample_1_1_bullet}}{}
+\item \contentsline{section}{ssuds\+::Hash\+Map\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_hash_map}}{}
 \item \contentsline{section}{ssuds\+::Linked\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_linked_list}}{}
 \item \contentsline{section}{ssuds\+::Linked\+List\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}\+::Linked\+List\+Iterator}{\pageref{classssuds_1_1_linked_list_1_1_linked_list_iterator}}{}
+\item \contentsline{section}{ssuds\+::Ordered\+Set\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{classssuds_1_1_ordered_set}}{}
 \item \contentsline{section}{example\+::Person}{\pageref{classexample_1_1_person}}{}
 \item \contentsline{section}{example\+::Person\+Database}{\pageref{classexample_1_1_person_database}}{}
+\item public\+::testing\+::Test\begin{DoxyCompactList}
+\item \contentsline{section}{Hash\+Map\+Tests}{\pageref{class_hash_map_tests}}{}
+\item \contentsline{section}{Ordered\+Set\+Tests}{\pageref{class_ordered_set_tests}}{}
+\end{DoxyCompactList}
 \item testing\+::Test\begin{DoxyCompactList}
 \item \contentsline{section}{Array\+List\+Test\+Fixture}{\pageref{class_array_list_test_fixture}}{}
 \end{DoxyCompactList}
