--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -244,8 +244,12 @@
 \input{classssuds_1_1_array_list_1_1_array_list_iterator}
 \input{class_array_list_test_fixture}
 \input{classexample_1_1_bullet}
+\input{classssuds_1_1_hash_map}
+\input{class_hash_map_tests}
 \input{classssuds_1_1_linked_list}
 \input{classssuds_1_1_linked_list_1_1_linked_list_iterator}
+\input{classssuds_1_1_ordered_set}
+\input{class_ordered_set_tests}
 \input{classexample_1_1_person}
 \input{classexample_1_1_person_database}
 \input{classssuds__drawing_1_1_text_circle}
@@ -257,7 +261,9 @@
 \input{word__reader_8h_source}
 \input{array__list_8h_source}
 \input{array__list__utility_8h_source}
+\input{hash__map_8h_source}
 \input{linked__list_8h_source}
+\input{ordered__set_8h_source}
 \input{text__circle_8h_source}
 %--- End generated contents ---
 % Index
