--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -4,8 +4,12 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classssuds_1_1_array_list_1_1_array_list_iterator}{ssuds\+::\+Array\+List$<$ T $>$\+::\+Array\+List\+Iterator}} \\*The job of \doxylink{classssuds_1_1_array_list_1_1_array_list_iterator}{Array\+List\+Iterator} is to traverse the data in an \doxylink{classssuds_1_1_array_list}{Array\+List}. \doxylink{classssuds_1_1_array_list}{Array\+List} wouldn\textquotesingle{}t necessarily {\itshape need} an iterator since the internal array supports random access, but this is a chance to get used to the iterator pattern, which is much more useful for the user in other classes. We might eventually use inheritance to derive this class from some common iterator class }{\pageref{classssuds_1_1_array_list_1_1_array_list_iterator}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_array_list_test_fixture}{Array\+List\+Test\+Fixture}} }{\pageref{class_array_list_test_fixture}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classexample_1_1_bullet}{example\+::\+Bullet}} }{\pageref{classexample_1_1_bullet}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classssuds_1_1_hash_map}{ssuds\+::\+Hash\+Map$<$ T $>$}} }{\pageref{classssuds_1_1_hash_map}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_hash_map_tests}{Hash\+Map\+Tests}} }{\pageref{class_hash_map_tests}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classssuds_1_1_linked_list}{ssuds\+::\+Linked\+List$<$ T $>$}} }{\pageref{classssuds_1_1_linked_list}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classssuds_1_1_linked_list_1_1_linked_list_iterator}{ssuds\+::\+Linked\+List$<$ T $>$\+::\+Linked\+List\+Iterator}} }{\pageref{classssuds_1_1_linked_list_1_1_linked_list_iterator}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classssuds_1_1_ordered_set}{ssuds\+::\+Ordered\+Set$<$ T $>$}} }{\pageref{classssuds_1_1_ordered_set}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_ordered_set_tests}{Ordered\+Set\+Tests}} }{\pageref{class_ordered_set_tests}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classexample_1_1_person}{example\+::\+Person}} \\*This is a simple class we\textquotesingle{}ll use to explore basic C++ OOP (Object-\/\+Oriented Programming) concepts. It\textquotesingle{}s not very useful in and of itself }{\pageref{classexample_1_1_person}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classexample_1_1_person_database}{example\+::\+Person\+Database}} \\*A "{}smart array"{} of \doxylink{classexample_1_1_person}{Person} objects. Our Array\+List class (Lab2+) will generalize a lot of what we have started here }{\pageref{classexample_1_1_person_database}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classssuds__drawing_1_1_text_circle}{ssuds\+\_\+drawing\+::\+Text\+Circle}} \\*A Simple Circle with text centered in it }{\pageref{classssuds__drawing_1_1_text_circle}}{}
