--- a/latex/files.tex
+++ b/latex/files.tex
@@ -6,6 +6,8 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{include/example/\mbox{\hyperlink{word__reader_8h_source}{word\+\_\+reader.\+h}} }{\pageref{word__reader_8h_source}}{}
 \item\contentsline{section}{include/ssuds/\mbox{\hyperlink{array__list_8h_source}{array\+\_\+list.\+h}} }{\pageref{array__list_8h_source}}{}
 \item\contentsline{section}{include/ssuds/\mbox{\hyperlink{array__list__utility_8h_source}{array\+\_\+list\+\_\+utility.\+h}} }{\pageref{array__list__utility_8h_source}}{}
+\item\contentsline{section}{include/ssuds/\mbox{\hyperlink{hash__map_8h_source}{hash\+\_\+map.\+h}} }{\pageref{hash__map_8h_source}}{}
 \item\contentsline{section}{include/ssuds/\mbox{\hyperlink{linked__list_8h_source}{linked\+\_\+list.\+h}} }{\pageref{linked__list_8h_source}}{}
+\item\contentsline{section}{include/ssuds/\mbox{\hyperlink{ordered__set_8h_source}{ordered\+\_\+set.\+h}} }{\pageref{ordered__set_8h_source}}{}
 \item\contentsline{section}{include/ssuds\+\_\+drawing/\mbox{\hyperlink{text__circle_8h_source}{text\+\_\+circle.\+h}} }{\pageref{text__circle_8h_source}}{}
 \end{DoxyCompactList}
